# interfaces

./: .gitignore  Dockerfile  README.md  db.py  entrypoint.sh  mailing.py  mailing_templates.py  main.py  models.py  mutations.py  otypes.py  pydoc-markdown.yml  pyproject.toml  queries.py  requirements.txt  utils.py
.github/workflows/: formatting.yml
