[project]
name = "interfaces"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi==0.116.1",
    "httpx==0.28.1",
    "msal==1.33.0",
    "pymongo==4.14.1",
    "strawberry-graphql[debug-server]==0.280.0",
]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
# line too long, unsorted imports, unused imports
extend-select = ["E501", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
