[project]
name = "interfaces-subgraph"
version = "1.0.0"
readme = "README.md"

requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi~=0.135.2",
    "httpx==0.28.1",
    "msal==1.35.1",
    "pymongo==4.16.0",
    "strawberry-graphql[cli]==0.313.0",
]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
# line too long, unsorted imports, unused imports
extend-select = ["E501", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
